[tool.poetry]
name = "repl_python3_RockandRoll"
version = "0.1.0"
description = ""
authors = ["sheep1shsheep <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.6.6"
discord = "^1.7.3"
giphy_client = "^1.0.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
